fix: profile picture update bug fix wip: configure swagger
